--- a/suhu/.env
+++ b/suhu/.env
@@ -21,6 +21,7 @@ CI_ENVIRONMENT = development
 #--------------------------------------------------------------------
 
 app.baseURL = 'http://localhost:8080/'
+PYTHONPATH = '/var/www/html/ci4/app/Python'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
